vm/42sh_tester/public/error_logs/42sh_106
42sh:1:25: [1m[91merror[0m: unexpected end of file
  1  |  echo ${VAR:-${NESTED_VAR}
     |                          [1m[91m^[0m
